syntax = "proto3";
package proto;
option java_package = "com.school.management";
option java_outer_classname = "GenericProto";

message PageableResponse {
    int32 size = 1;
    int32 number = 2;
    int32 totalPages = 3;
    int32 totalElements = 4;
    int32 numberOfElements = 5;
}

message ErrorResponse {
    string type = 1;
    string code = 2;
    string message = 3;
    map<string, string> params = 4;
}

message ValidationError {
  string field = 1;
  string value = 2;
  string message = 3;
}

message ValidationErrorResponse {
  string type = 1;
  string code = 2;
  repeated ValidationError errors = 3;
}